- fixed files not being created the first time the bot's powered on - somewhat fixed help pagination (needs to be categorized now)